swagger fix for cart
