# docs/auth/auth_swagger.json
@@ -1,23 +1,14 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server.",
+        "description": "Authentication Server",
         "title": "AuthServer",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "contact": {},
         "version": "1.0"
     },
-    "basePath": "/",
+    "basePath": "/auth",
     "paths": {
-        "/auth/login": {
+        "/login": {
             "post": {
                 "description": "Authenticates a user and returns a token",
                 "consumes": [
@@ -41,25 +32,10 @@
                         }
                     }
                 ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
-        "/auth/signup": {
+        "/signup": {
             "post": {
                 "description": "Registers a new user",
                 "consumes": [
@@ -105,6 +81,10 @@
     "definitions": {
         "auth.LoginRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
